--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>GitHub Hosted Alert</title>
     <script>
         window.onload = function() {
-            alert("Welcome to my GitHub-hosted page!");
+            alert("YOU ARE HACKED!");
         };
     </script>
 </head>
 <body>
-    <h1>YOU ARE HACKED!</h1>
+    <h1>Welcome to my GitHub-hosted page!</h1>
     <p>This page is hosted on GitHub and displays an alert when visited.</p>
 </body>
 </html>
